API added; Flyway & repository added to Graph; Graph implemented; URL -> URI refactored; Code calculation fixed